--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -8,9 +8,9 @@ body {
   height: 100vh;
   background: linear-gradient(
     200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
+    #0c0505 -29.09%,
+    #300c4f 51.77%,
+    #1b0428 129.35%
   );
   font-family: sans-serif;
   overflow-y: hidden;
@@ -59,4 +59,12 @@ a:hover {
   justify-content: center;
   align-items: center;
   margin: 20px 0;
+}
+
+.Barra {
+
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
 }
